--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,19 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <script async src="https://unpkg.com/@material-tailwind/html@latest/scripts/ripple.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+   <style type="text/tailwindcss">
+    @layer utilities {
+      .content-auto {
+        content-visibility: auto;
+      }
+    }
+  </style> 
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
